--- a/index.html
+++ b/index.html
@@ -39,13 +39,11 @@
                                     </div>
                                 </div>
                                 <div class="__content">
-                                    <ul class="left __content-ul">
+                                    <ul class="__content-ul">
                                         <li class="active"><a href="#">Giới thiệu về TKSIC</a></li>
                                         <li><a href="#">Chuyên gia TKSIC</a></li>
-                                    </ul>
-                                    <ul class="right __content-ul">
-                                        <li><a href="#">Nguyên tắc đầu tư</a></li>
                                         <li><a href="#">Thông cáo từ TKSIC</a></li>
+                                        <li><a href="#">Nguyên tắc đầu tư</a></li>
                                         <li><a href="#">Báo chí nói về TKSIC</a></li>
                                     </ul>
                                 </div>
@@ -63,13 +61,11 @@
                                     </div>
                                 </div>
                                 <div class="__content">
-                                    <ul class="left __content-ul">
+                                    <ul class="__content-ul">
                                         <li class="active"><a href="#">Nhận định thị trường</a></li>
                                         <li><a href="#">Biểu đồ</a></li>
-                                        <li><a href="#">Kiến thức đầu tư</a></li>
-                                    </ul>
-                                    <ul class="right __content-ul">
                                         <li><a href="#">Tin tức thị trường</a></li>
+                                        <li><a href="#">Kiến thức đầu tư</a></li>
                                         <li><a href="#">Lịch kinh tế</a></li>
                                     </ul>
                                 </div>
@@ -87,12 +83,10 @@
                                     </div>
                                 </div>
                                 <div class="__content">
-                                    <ul class="left __content-ul">
+                                    <ul class="__content-ul">
                                         <li class="active"><a href="#">Tư vấn danh mục đầu tư</a></li>
-                                        <li><a href="#">Tư vấn quản lý rủi ro đầu tư</a></li>
-                                    </ul>
-                                    <ul class="right __content-ul">
                                         <li><a href="#">Khuyến nghị đầu tư</a></li>
+                                        <li><a href="#">Tư vấn quản lý rủi ro đầu tư</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -109,10 +103,8 @@
                                     </div>
                                 </div>
                                 <div class="__content">
-                                    <ul class="left __content-ul">
+                                    <ul class="__content-ul">
                                         <li class="active"><a href="#">AI TKSIC VIP</a></li>
-                                    </ul>
-                                    <ul class="right __content-ul">
                                         <li><a href="#">AI TKSIC SIGNAL</a></li>
                                     </ul>
                                 </div>
@@ -130,12 +122,10 @@
                                     </div>
                                 </div>
                                 <div class="__content">
-                                    <ul class="left __content-ul">
+                                    <ul class="__content-ul">
                                         <li class="active"><a href="#">Liên hệ</a></li>
-                                        <li><a href="#">FAQ</a></li>
-                                    </ul>
-                                    <ul class="right __content-ul">
                                         <li><a href="#">Tuyển dụng</a></li>
+                                        <li><a href="#">FAQ</a></li>
                                     </ul>
                                 </div>
                             </div>
